# programmingbitcoin

./: .gitignore  pyproject.toml  shell.nix  test.py
btc/: block.py  bloomfilter.py  ecc.py  helper.py  merkleblock.py  network.py  op.py  script.py  tx.py
