[tool.poetry]
name = "programmingbitcoin"
version = "0.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
nose = "^1.3.7"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.910"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
